; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_initio.c_initio_push_pend_scb.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_initio.c_initio_push_pend_scb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.initio_host = type { %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk* }
%struct.scsi_ctrl_blk = type { %struct.scsi_ctrl_blk*, i32 }

@SCB_PEND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.initio_host*, %struct.scsi_ctrl_blk*)* @initio_push_pend_scb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @initio_push_pend_scb(%struct.initio_host* %0, %struct.scsi_ctrl_blk* %1) #0 {
  %3 = alloca %struct.initio_host*, align 8
  %4 = alloca %struct.scsi_ctrl_blk*, align 8
  store %struct.initio_host* %0, %struct.initio_host** %3, align 8
  store %struct.scsi_ctrl_blk* %1, %struct.scsi_ctrl_blk** %4, align 8
  %5 = load i32, i32* @SCB_PEND, align 4
  %6 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %4, align 8
  %7 = getelementptr inbounds %struct.scsi_ctrl_blk, %struct.scsi_ctrl_blk* %6, i32 0, i32 1
  store i32 %5, i32* %7, align 8
  %8 = load %struct.initio_host*, %struct.initio_host** %3, align 8
  %9 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %8, i32 0, i32 1
  %10 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %9, align 8
  %11 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %4, align 8
  %12 = getelementptr inbounds %struct.scsi_ctrl_blk, %struct.scsi_ctrl_blk* %11, i32 0, i32 0
  store %struct.scsi_ctrl_blk* %10, %struct.scsi_ctrl_blk** %12, align 8
  %13 = icmp ne %struct.scsi_ctrl_blk* %10, null
  br i1 %13, label %14, label %18

14:                                               ; preds = %2
  %15 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %4, align 8
  %16 = load %struct.initio_host*, %struct.initio_host** %3, align 8
  %17 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %16, i32 0, i32 1
  store %struct.scsi_ctrl_blk* %15, %struct.scsi_ctrl_blk** %17, align 8
  br label %25

18:                                               ; preds = %2
  %19 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %4, align 8
  %20 = load %struct.initio_host*, %struct.initio_host** %3, align 8
  %21 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %20, i32 0, i32 1
  store %struct.scsi_ctrl_blk* %19, %struct.scsi_ctrl_blk** %21, align 8
  %22 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %4, align 8
  %23 = load %struct.initio_host*, %struct.initio_host** %3, align 8
  %24 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %23, i32 0, i32 0
  store %struct.scsi_ctrl_blk* %22, %struct.scsi_ctrl_blk** %24, align 8
  br label %25

25:                                               ; preds = %18, %14
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
